--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Simple App</h1>
+<p>
+	Ceci est la page de contact de l'Application Exemple du
+	<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>.
+</p>
